Change the autoupgrade mechanism around so that the client tells the server its OS. Make Windows uninstall work. Add 'allow autoupgrade' option to a second Windows installer screen.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,9 @@
   * Include the client name in arguments to server scripts.
   * Do not log a message in the server SIGCHLD handler, as this appeared to
     be causing an occasional lock up on a Ubuntu server.
+  * Upgrade Windows depkgs to latest versions of openssl.
+  * Make Windows uninstall work.
+  * Add 'allow autoupgrade' option to a second screen on the Windows installer.
 
 2011-12-30 Changes in burp-1.2.7:
   * Add an automated test script.
