--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -212,6 +212,9 @@ Path to Diffie-Hellman parameter file. To generate one with openssl, use a comma
 \fBmax_children=[number]\fR
 Defines the number of child processes to fork (the number of clients that can simultaneously connect. The default is 5.
 .TP
+\fBmax_storage_subdirs=[number]\fR
+Defines the number of subdirectories in the data storage areas. The maximum number of subdirectories that ext3 allows is 32000. If you do not set this option, it defaults to 30000.
+.TP
 \fBtimer_script=[path]\fR
 Path to the script to run when a client connects with the timed backup option. If the script exits with code 0, a backup will run. The first two arguments are the client name and the path to the 'current' storage directory. The next three arguments are reserved, and user arguments are appended after that. An example timer script is provided. The timer_script option can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
