--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
   * Fix bug where attributes on Windows directories were not getting read
     properly.
