--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.3.0) unstable; urgency=low
+
+  * update to 1.3.0
+
+ -- Graham Keeling <burp-users@lists.sourceforge.net>  Fri, 27 January 2012 17:00:00 +0000
+
 burp (1.2.7) unstable; urgency=low
 
   * update to 1.2.7
