--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Add 'exclude_fs =' option for Linux so that you can skip partitions
+    types (for example, tmpfs) without generating warnings.
+
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
   * Fix bug where attributes on Windows directories were not getting read
