In the tests, check to see whether it looks like the server has finished the backup before moving on, rather than just waiting a set amount of time.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
     types (for example, tmpfs) without generating warnings.
   * If recovery method 'resume' is set, but the includes/excludes change,
     switch to 'use', then start a new backup.
+  * In the tests, check to see whether it looks like the server has finished
+    the backup before moving on, rather than just waiting a set amount of time.
 
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
