--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
     switch to 'use', then start a new backup.
   * In the tests, check to see whether it looks like the server has finished
     the backup before moving on, rather than just waiting a set amount of time.
+  * Add man pages for bedup and burp_ca.
 
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
