--- a/README
+++ b/README
@@ -4,7 +4,7 @@ You need to compile burp on a unix-based operating system first.
 Make sure that you have openssl, zlib and librsync libraries and development
 libraries installed. With debian or ubuntu, this command should install them
 for you:
-apt-get install librsync-dev libz-dev libssl-dev
+apt-get install librsync-dev libz-dev libssl-dev uthash-dev
 Change to the burp source directory and run "./configure",
 then "make".
 All being well, burp will compile successfully.
