--- a/src/win32/README
+++ b/src/win32/README
@@ -4,23 +4,21 @@ How to build the Windows client installers on unix-based systems
 First you need to get a working cross compile area set up.
 
 Go to http://burp.grke.net/ and follow the links to download:
-burp-cross-tools-mingw32-(latest.version).tar.bz2 (for 32bit clients)
-burp-cross-tools-mingw64-(latest.version).tar.bz2 (for 64bit clients)
+burp-cross-tools-(latest.version).tar.bz2
 
-Unpack them in the same directory in which you unpacked the burp source, and
+Unpack it in the same directory in which you unpacked the burp source, and
 go into the directory called 'source'. Follow the instructions in the README
-files.
+files. This will install cross compilers for both 32bit and 64bit clients.
 
 
 Then you need to build the burp dependencies.
 
 Go to http://burp.grke.net/ and follow the links to download:
-burp-depkgs-mingw32-(latest.version).tar.bz2 (for 32bit clients)
-burp-depkgs-mingw64-(latest.version).tar.bz2 (for 64bit clients)
+burp-depkgs-(latest.version).tar.bz2
 
 Unpack them in the same directory in which you unpacked the burp source, and
 go into the directory called 'source'. Follow the instructions in the README
-files.
+files. This will install the dependencies for both 32bit and 64bit clients.
 
 Once these have been built successfully, you can build the burp installers
 themselves.
