--- a/manpages/burp_ca.8
+++ b/manpages/burp_ca.8
@@ -1,15 +1,13 @@
-.\" manual page [] for burp_ca
-.\" SH section heading
-.\" SS subsection heading
-.\" LP paragraph
-.\" IP indented paragraph
-.\" TP hanging label
-.TH burp_ca 8 "burp_ca"
+.TH burp_ca 8 "February 10, 2012" "" "burp_ca"
+
 .SH NAME
-bedup 
+burp_ca \- program for generating certificates for use with burp
+
 .SH SYNOPSIS
-.B burp_ca: [options]
-.SH DESCRIPTION
+.B burp_ca
+.RI [ options ]
+.br
+
 .LP
 A script for generating certificates for use with burp. This script comes with the burp backup and restore package, and was contributed by Patrick Koppen.
 
