--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
   * Add man pages for bedup and burp_ca.
   * Remove embedded uthash code. It will need to be installed as a dependency.
     For example, in Debian, you might run 'apt-get install uthash-dev'.
+  * Add Bas van den Dikkenberg's tweaks for getting burp into official Debian
+    and Ubuntu repositories.
 
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
