--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@
   * Make the server tell the client what extra_comms features it supports, so
     that, in future, old servers are more likely to work with new clients. 
   * Improve 'make clean'.
+  * Add option to strip off leading path components on restore.
 
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
