--- a/debian/changelog
+++ b/debian/changelog
@@ -4,10 +4,9 @@ burp (1.3.1-1) unstable; urgency=low
   * Switched to Standards-Version 3.9.3 Debian bug: (Closes: #661001)
   * respect noopt in DEB_BUILD_OPTIONS. Debian bug: (Closes: #661281)
   * Fixed typo in logrotate script Debian bug: (Closes: #660964)
+  * added debug package Debian bug: (Closes: #661267)
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net> Tue, 26 Feb 2012 10:47:01 +0100
-
-
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sun, 26 Feb 2012 11:38:33 +0100
 
 burp (1.3.0+20120214git-1) unstable; urgency=low
 
@@ -24,13 +23,13 @@ burp (1.3.0+20120214git-1) unstable; urgency=low
   * Remove embedded uthash code. It will need to be installed
     as a dependency. (Closes: #659454)
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net> Tue, 14 Feb 2012 15:47:01 +0100
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 14 Feb 2012 15:47:01 +0100
 
 burp (1.3.0-3) unstable; urgency=low
 
   * Forgot to add 1 patch
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net> Sun, 12 Feb 2012 14:50:29 +0100
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sun, 12 Feb 2012 14:50:29 +0100
 
 burp (1.3.0-2) unstable; urgency=low
 
@@ -44,7 +43,7 @@ burp (1.3.0-2) unstable; urgency=low
   * thanks to Justin B Rye from debian-l10n-english team for
     helping with linguistic support
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net> Sat, 11 Feb 2012 23:48:03 +0100
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sat, 11 Feb 2012 23:48:03 +0100
 
 burp (1.3.0-1) unstable; urgency=low
 
@@ -65,9 +64,10 @@ burp (1.3.0-1) unstable; urgency=low
   * added man pages for bedup and burp_ca
 
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net> Fri, 10 Feb 2012 17:14:13 +0100
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Fri, 10 Feb 2012 17:14:13 +0100
 
 
+Old Changelog:
 
 burp (1.3.0) unstable; urgency=low
 
