--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@
     that, in future, old servers are more likely to work with new clients. 
   * Improve 'make clean'.
   * Add option to strip off leading path components on restore.
+  * Fix segfault that was happening on the server when SSL_accept() failed.
 
 2012-01-27 Changes in burp-1.3.0:
   * Add a mechanism for automatically upgrading clients.
