Add ability for conf files to point to more conf files to read.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -128,6 +128,9 @@ Timed backup. The same as 'burp -a b', except that a script is run on the server
 .SH SERVER CONFIGURATION FILE OPTIONS
 
 .TP
+\fB. [path]\fR
+Read an additional configuration file.
+.TP
 \fBmode=server\fR
 Required to run in server mode.
 .TP
@@ -271,6 +274,9 @@ Path to autoupgrade directory from which upgrades are downloaded. The option can
 
 .SH CLIENT CONFIGURATION FILE OPTIONS
 
+.TP
+\fB. [path]\fR
+Read an additional configuration file.
 .TP
 \fBmode=client\fR
 Required to run in client mode.
