--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Add ability for conf files to point to more conf files to read.
+
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
   * Move to using mingw-w64 for both 32bit and 64bit Windows builds.
