Some extra notes about the new '. path/to/config' syntax.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -446,6 +446,8 @@ Additionally, the following options can be overridden here for each client:
 \fBserver_script\fR
 \fBserver_script_arg\fR
 \fBserver_script_post_run_on_fail\fR
+.TP
+As with the other configuration files, extra configuration can be included with the '. path/to/config/file' syntax.
 
 .SH Some notes on SSL certificates
 .TP
