--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
   * Add ability for conf files to point to more conf files to read.
+  * Fix status server segfault when deleting files from clientconfdir.
+  * Allow directories in clientconfdir.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
