--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
   * Fix status server segfault when deleting files from clientconfdir.
   * Allow directories in clientconfdir.
   * Add the ability for the server to set the client include/excludes.
+  * Simulate browsing backups with the use of "-a l/L -d path".
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
