--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Allow directories in clientconfdir.
   * Add the ability for the server to set the client include/excludes.
   * Simulate browsing backups with the use of "-a l/L -d path".
+  * Add ability to set up a restore on the server side.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
