--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
   * Add the ability for the server to set the client include/excludes.
   * Simulate browsing backups with the use of "-a l/L -d path".
   * Add ability to set up a restore on the server side.
+  * Add ability to specificy child processes separately to status child process
+    with new max_status_children option.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
