--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@
   * Add ability to set up a restore on the server side.
   * Add ability to specificy child processes separately to status child process
     with new max_status_children option.
+  * Status monitor - make keypresses more responsive.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
