Add 'include_ext' option, which excludes all files unless their names end in the given extension.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -409,6 +409,9 @@ Path to include in the backup. You can have multiple include lines. Use forward 
 \fBexclude=[path]\fR
 Path to exclude from the backup. You can have multiple exclude lines. Use forward slashes '/', not backslashes '\\' as path delimiters.
 .TP
+\fBinclude_ext=[extension]\fR
+Extensions to include in the backup. Case insensitive. Nothing else will be included in the backup. You can have multiple include extension lines. For example, set 'txt' to include files that end in '.txt'. You need to specify an 'include' line so that burp knows where to start looking.
+.TP
 \fBexclude_ext=[extension]\fR
 Extensions to exclude from the backup. Case insensitive. You can have multiple exclude extension lines. For example, set 'vdi' to exclude VirtualBox disk images.
 .TP
