--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,8 @@
   * Status monitor - make keypresses more responsive.
   * Fix bug where old clients didn't leave an incexc file on the server meant
     that resume would not start.
+  * Add 'include_ext' option, which excludes all files unless their names end
+    in the given extension.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
