--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -347,6 +347,9 @@ The SSL key password.
 \fBssl_cert_password=[password]\fR
 Synonym for ssl_key_password.
 .TP
+\fBssl_peer_cn=[string]\fR
+Must match the common name in the SSL certificate that the server gives when it connects. If ssl_peer_cn is not set, the server name will be used instead.
+.TP
 \fBencryption_password=[password]\fR
 Set this to enable client side file Blowfish encryption. If you do not want encryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). Burp will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
 .TP
@@ -447,7 +450,7 @@ For the server to know about clients that can contact it, you need to place a fi
 .TP
 The file name must match the name in the 'cname' field on the client.
 .TP
-\fBssl_peer_cn=[string]\fR must also be set and match the common name in the SSL certificate that the client gives when it connects.
+\fBssl_peer_cn=[string]\fR must match the common name in the SSL certificate that the client gives when it connects. If ssl_peer_cn is not set, the client name will be used instead (the clientconfdir file name).
 .TP
 The file needs to contain a line like \fBpassword=[password]\fR that matches the same field on the client, or \fBpasswd=[encrypted password]\fR - where the plain text password on the client will be tested against an encrypted password of the kind you might find in /etc/passwd.
 .TP
