Don't try to chuser/chgrp in the child if the user/group settings are the same as the parent (fixes bug where setting user/group in the server wouldn't work, because it would try to chuser/chgrp twice).

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,9 @@
     in the given extension.
   * Fall back to using the client or server name if ssl_peer_cn is unset on the
     server or client.
+  * Don't try to chuser/chgrp in the child if the user/group settings are the
+    same as the parent (fixes bug where setting user/group in the server
+    wouldn't work, because it would try to chuser/chgrp twice).
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
