--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,9 @@
   * Don't try to chuser/chgrp in the child if the user/group settings are the
     same as the parent (fixes bug where setting user/group in the server
     wouldn't work, because it would try to chuser/chgrp twice).
+  * Windows installer: add comment about poll interval '0' means that the
+    scheduled job isn't installed.
+  * Windows installer: don't install the scheduled task when doing an upgrade.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
