--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,8 @@
     scheduled job isn't installed.
   * Windows installer: don't install the scheduled task when doing an upgrade.
   * Unlock the client directory after server_script_post has run.
+  * Fix bug where the wrong arg count was being given to the server post
+    script.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
