--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,6 +22,7 @@
   * Unlock the client directory after server_script_post has run.
   * Fix bug where the wrong arg count was being given to the server post
     script.
+  * Make sure status snapshot exits when there are no backup clients.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
