--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -26,15 +26,6 @@ exit. This is useful for debugging. Implies '-F'.
 \fB\-F\fR \fB\fR
 Foreground mode. The server will fork into the background and run as a daemon if you do not give this option.
 .TP
-\fB\-a s\fR \fB\fR
-Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. The live monitor requires ncurses support at compile time.
-.TP
-\fB\-a S\fR \fB\fR
-Similar to '-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support.
-.TP
-\fB\-C\fR \fB[client]\fR
-For use with the status monitor. Limit the output to a single client.
-.TP
 \fB\-i\fR \fB\fR
 Print an index table of symbols that humans may see burp produce, and exit.
 .TP
@@ -44,6 +35,26 @@ Path to log file. The default is stdout. This option overrides the
 option in the config file. Use 
 .I /dev/null
 to deactivate or '' to reactivate output.
+.TP
+\fB\-a s\fR \fB\fR
+Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '-c' option. The live monitor requires ncurses support at compile time.
+.TP
+\fB\-a S\fR \fB\fR
+Similar to '-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '-a S', listed below. These enable logs and contents of backups to be listed whilst logged in on the server machine.
+.TP
+ADDITIONAL SERVER OPTIONS TO USE WITH '-a S'
+.TP
+\fB\-C\fR \fB[client]\fR
+Limit the output to a single client.
+.TP
+\fB\-b\fR \fB[number]\fR
+Show listable files in a particular backup (requires -C).
+.TP
+\fB\-z\fR \fB[file]\fR
+Dump a particular log file in a backup (requires -C and -b).
+.TP
+\fB\-d\fR \fB[path]\fR
+Show a particular path in a backup (requires -C and -b).
 
 .SH CLIENT OPTIONS
 .TP
