--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+burp (1.3.2-2) unstable; urgency=low
+
+  * In progress version for Equiinet.
+
+ -- Graham Keeling <keeling@spamcop.net>  Wed, 07 Mar 2012 14:00:00 +0000
+
 burp (1.3.2-1) unstable; urgency=low
 
   * New upstream release version 1.3.2
