--- a/CHANGELOG
+++ b/CHANGELOG
@@ -24,6 +24,7 @@
     script.
   * Make sure status snapshot exits when there are no backup clients.
   * Ability to dump logs and paths in backups using '-a S'.
+  * Bug fixes to ssl_extra_checks_script.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
