--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,6 +25,7 @@
   * Make sure status snapshot exits when there are no backup clients.
   * Ability to dump logs and paths in backups using '-a S'.
   * Bug fixes to ssl_extra_checks_script.
+  * Bug fix: initialise network_timeout properly.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
