--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,6 +26,7 @@
   * Ability to dump logs and paths in backups using '-a S'.
   * Bug fixes to ssl_extra_checks_script.
   * Bug fix: initialise network_timeout properly.
+  * Fix typos in docs/burp_ca.txt.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
