--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,8 @@
   * Bug fixes to ssl_extra_checks_script.
   * Bug fix: initialise network_timeout properly.
   * Fix typos in docs/burp_ca.txt.
+  * Add 'export LANG=C' to the timer script, so that timer_arg days are always
+    expected in English.
 
 2012-02-27 Changes in burp-1.3.1:
   * EFS support on Windows.
